--- a/MyAwesomeApp/pom.xml
+++ b/MyAwesomeApp/pom.xml
@@ -54,6 +54,16 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+		<configuration>
+          	  <archive>
+            	    <manifest>
+              		<addClasspath>true</addClasspath>
+              		<classpathPrefix>lib/</classpathPrefix>
+             		 <mainClass>com.mycompany.app.App</mainClass>
+           	   </manifest>
+          	  </archive>
+        	</configuration>
+
             </plugin>
         </plugins>
 	<finalName>springbootApp</finalName>
